# crates-io-webapi

./: .appveyor.yml  .travis.yml  Cargo.toml
src/: lib.rs
tests/: api.rs  serde.rs
tests/sample_responses/: exact-serde.json  inexact-serde-derive.json
