[package]
name = "crates-io-webapi"
version = "0.2.0"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
reqwest = { version  = "0.10", features = ["json"] }
derive_more = "0.99.2"

[dev-dependencies]
serde_json = "1.0.33"
